[gd_scene format=3 uid="uid://bttmy3kqvmgjf"]

[ext_resource type="Script" uid="uid://cmt5iql4ot25w" path="res://src/ui/garage/tank_display_panel/tank_display_panel.gd" id="1_0g2d7"]
[ext_resource type="Texture2D" uid="uid://cds80ke8yjv62" path="res://src/ui/garage/background_200.png" id="1_vveua"]
[ext_resource type="Texture2D" uid="uid://cngndpvkvj4ew" path="res://src/entities/tank/tanks/debug_tank/debug_tank_preview.png" id="3_0g2d7"]

[node name="TankDisplayPanel" type="PanelContainer" unique_id=262773402]
custom_minimum_size = Vector2(200, 200)
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"PanelContainerDark"
script = ExtResource("1_0g2d7")

[node name="Background" type="TextureRect" parent="." unique_id=1746707041]
layout_mode = 2
texture = ExtResource("1_vveua")
expand_mode = 1
stretch_mode = 6

[node name="TankDisplay" type="TextureRect" parent="." unique_id=1737752261]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_0g2d7")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1692637722]
layout_mode = 2

[node name="UsernameLabel" type="Label" parent="VBoxContainer" unique_id=1804314877]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderLabel"
text = "COMMANDER"
autowrap_mode = 2